新增 getMovieTrailer 最新預告片與 now-playing 現正熱映中